<resources>
    <string name="app_name">Startphone</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="internet">Internet</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="weather">Weather</string>
    <string name="applications">Applications</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="page">Page:</string>
    <string name="date_time_weather">Date, Time &amp; Weather</string>
    <string name="battery_percentage_placeholder">%1$d%%</string>
    <string name="temperature_degrees_placeholder">%1$s℃</string>
    <string name="page_placeholder">Page %1$d</string>
    <string name="current_page_placeholder">%1$d/%2$d</string>
    <string name="i_need_help">I need help</string>
    <string name="foreground_notification_content_text">The application is running in the foreground.</string>
    <string name="notification_channel_description">Notifications related to general Startphone functionality.</string>
    <string name="what_can_i_help_you_with">What can I help you with?</string>
    <string name="help_me_i_stuck">Help, I am stuck!</string>
    <string name="close_me">Close me</string>
    <string name="accessibility_service_name">Startphone Window Detection Service</string>
    <string name="accessibility_service_description">Service for detecting currently running application, in order to provide relevant assistance.</string>
    <string name="exit_app_placeholder">Exit %1$s</string>
    <string name="this_application">This Application</string>
    <string name="close_this_application">Close this application</string>
    <string name="tutorial_index_placeholder">%1$d.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="applications_description">Select the applications your senior will use:</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_description">Welcome to Startphone!\n\nFirst, we need to get some things set up. You can try to do it yourself, but if you run into trouble, make sure you have someone next to you.</string>
    <string name="press_get_started_when_ready">Press \'GET STARTED\' when ready</string>
    <string name="text_continue">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">1. Provide us with some details about the senior who will use this smartphone:</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="sign_up_email_description">2. We also need a valid email address. Press the button below to link your Google Account:</string>
    <string name="system_setup">System Setup</string>
    <string name="system_setup_description">For an optimal experience, we need your help with changing some Settings.</string>
    <string name="request">Request</string>
    <string name="system_setup_location_permission_description">1. In order to monitor Internet connection, we need the location permission. Press \'REQUEST\', then, if asked to, \'Allow only while using the app\'.</string>
    <string name="display_over_other_apps_description">2. Startphone includes HelpingHand, an assistant menu that is present on the screen at all times. For that, we need a special permission. Press \'REQUEST\', then, if asked to, \'Allow display over other apps\'.</string>
    <string name="set_default_launcher_description">There is one last thing: in order to make the user interface easier, Startphone needs to be set up as a default Launcher. After Startphone opens, a window will pop up. Select \'Startphone\', then \'Set as default\'.</string>
    <string name="success">Success</string>
    <string name="press_finish_to_open_startphone">Press \'FINISH\' to open Startphone.</string>
    <string name="setup_complete_message">Congratulations!\nStartphone is set up!</string>
    <string name="try_again">Try again</string>
    <string name="get_started">Get started</string>
    <string name="finish">Finish</string>
    <string name="permissions_rationale">We need your permission in order to properly set up Startphone.</string>
    <string name="open_startphone">Open Startphone</string>
    <string name="did_you_find_this_tutorial_useful">Did you find this tutorial useful?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_watch_it_again">Do you want to watch it again?</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="select_at_least_one_app">You must have at least one visible app</string>
    <string name="confirm_logout_title">Are you sure you want to logout?</string>
    <string name="confirm_logout_message">Logging out will erase your current settings.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
