<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.VisibleAppsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:elevation="5dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:elevation="3dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/sign_up_description"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/birthday"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <DatePicker
                android:id="@+id/age_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerHorizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <RadioGroup
                android:id="@+id/gender_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:checkedButton="@id/other_rb"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/female_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/female"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/other_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/other"
                    android:textSize="18sp" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerHorizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:elevation="3dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/sign_up_email_description"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:buttonSize="wide" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:visibility="invisible"
                app:autoSizeTextType="uniform"
                tools:text="email@gmail.com"
                tools:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>