<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_mb"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <ProgressBar
            android:id="@+id/loading_pb"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light"
            android:indeterminateTint="@android:color/black"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:elevation="3dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/signed_in_as"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signed_in_email_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@android:color/black"
            app:autoSizeTextType="uniform"
            tools:text="email@gmail.com" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_mb"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/light_gray"
        android:elevation="3dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/applications_description"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/applications_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_item_visible_application" />

</LinearLayout>