<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.VisibleAppsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:elevation="5dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/system_setup"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:elevation="6dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/system_setup_description"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lighter_gray"
                android:elevation="3dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/system_setup_location_permission_description"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/request_permissions_mb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:backgroundTint="@color/color_orange_grey"
                        android:padding="16dp"
                        android:text="@string/request"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/request_permissions_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textStyle="bold"
                        tools:text="Success!"
                        tools:textColor="@android:color/holo_green_dark" />

                </LinearLayout>

                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="180dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/tutorial_location_permission" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lighter_gray"
                android:elevation="3dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/display_over_other_apps_description"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/request_overlay_mb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:backgroundTint="@color/color_orange_grey"
                        android:padding="16dp"
                        android:text="@string/request"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/request_overlay_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textStyle="bold"
                        tools:text="Success!"
                        tools:textColor="@android:color/holo_green_dark" />

                </LinearLayout>

                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="180dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/tutorial_draw_overlay" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>